# hybrid-traffic-monitoring

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml  start-worker.sh  start.sh
alembic/: env.py
alembic/versions/: 2025_04_22_1708-54ea3729ce2c_traffic_model.py  2025_04_22_1811-4639522c7124_add_traffic_field.py  2025_05_10_1833-0014a9704849_alter_traffic.py  2025_05_10_2023-9e58cc19faa5_add_switches.py  2025_05_15_1705-ed71c51c1d56_add_new_models.py  2025_05_15_1845-32408d377afc_alter_models.py
grafana/provisioning/dashboards/: network_analytics.json  traffic.json
grafana/provisioning/datasources/: datasource.yaml
src/: config.py  dependencies.py  endpoints.py  enums.py  main.py  models.py  schemas.py  worker.py
src/datasources/: base.py  calculated.py  dataset.py  snmp.py
src/services/: analyzer.py  collector.py  optimizer.py  traffic.py
